resolve tomcat deploy permgen OOME issue